tests/negative/scope/import-current-package/err.expected
ERROR:
A package cannot import itself.
However, the package `testing` attempts to import itself at test.smol:3:8-3:15:
         2 | 
         3 | import testing;
           |        ^^^^^^^
         4 | 
